Adicionei um paragrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, magnam repudiandae. Est, animi nesciunt. Ipsam sit inventore in, magni tempora accusamus esse iusto, autem, laboriosam animi quisquam totam corporis nemo.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod odit consectetur placeat quia et itaque culpa mollitia quo eveniet aliquam deserunt voluptatibus, quidem, exercitationem qui hic reprehenderit? Commodi, dolor blanditiis?</p>
 </body>
 </html>
